# semduck

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: compatibility.yml  docs.yml  pypi-publish.yml
.semduck/llm-logs/: ask-20260331T170637192708Z-2a09edd403a44893aef1be3846ca3b12.jsonl
_project/: README.md
_project/decisions/: defer_tty_only_ask_reporter.md  metric_reference_stage_boundaries.md  remove_yaml_in_dbt_support.md
_project/issues/: ddl-alias-order-differs-from-sql.md  ddl-table-declaration-order-is-backwards.md  ecommerce-ask-eval-gaps.md  expression_first_metric_definitions.md  metrics-compiling-from-facts.md
_project/specs/: agent_platform_phased_delivery.md  cross_table_metric_composition.md  ecommerce-ask-hardening.md  expression_first_metrics.md  metric_fact_metric_references.md  persisted_semantic_concepts.md  semantic_view_inference.md  validation_layer_design.md
docs/: index.md  issues.md
docs/design_decisions/: remove_yaml_in_dbt_support.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: ask.md  choosing-an-integration.md  choosing-an-interface.md  cli.md  dbt.md  how-semduck-works.md  mcp-best-practices.md  mcp.md  python-api.md  (+2 more)
examples/: demo.py  orders_semantic.yaml
integration_tests/: test_dbt_semduck_integration.py
tests/: conftest.py  test_planner.py  test_qualifier.py  test_registry_reader.py  test_request_parser.py  test_runtime_executor.py  test_sql_compiler.py  test_where_rewriter.py  test_yaml_loader.py
(+78 files in other folders)
