[project]
name = "duckdb-semantic"
version = "0.1.0"
description = "DuckDB semantic view loader and query compiler"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "duckdb",
  "PyYAML",
]

[project.scripts]
duckdb-semantic = "duckdb_semantic.cli:main"

[dependency-groups]
dev = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckdb_semantic"]

