[project]
name = "semduck"
version = "0.1.0"
description = "DuckDB semantic view loader and query compiler"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "duckdb",
  "PyYAML",
]

[project.scripts]
semduck = "semduck.cli:main"

[dependency-groups]
dev = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semduck"]
